--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,13 @@
 	    <maven.compiler.source>11</maven.compiler.source>
    		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
+	
+	<dependencies>
+			<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
+		<dependency>
+		    <groupId>org.antlr</groupId>
+		    <artifactId>antlr4-runtime</artifactId>
+		    <version>4.7.2</version>
+		</dependency>	
+	</dependencies>
 </project>
